# scraping

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ping_schedule.yml  scrape.yml  scrape_eta.yaml  scrape_eta_api.yaml  scrape_top4_poly_events.yaml
src/poly/: list_polymarket_categories.py  list_top4_polymarket_events.py
src/store_eta/: __init__.py  __main__.py  cli.py  scraper.py  supabase.py
tests/: test_supabase_normalize.py
